fix(canvas): changes styling so that components only nominally on the canvas will appear clipped

--- a/components/Canvas/styles.module.css
+++ b/components/Canvas/styles.module.css
@@ -1,5 +1,6 @@
 .Canvas {
   position: relative;
+  overflow: hidden;
   border: 2px solid black;
   margin: 48px;
   height: calc(100% - 96px);
